alignment issue test3

--- a/css/fourth-section.css
+++ b/css/fourth-section.css
@@ -2,7 +2,7 @@
   background:url(/images/2.png) no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
-  height: 650px;
+  height: 600px;
   width: 100%;
 }
 
