--- a/css/third-section.css
+++ b/css/third-section.css
@@ -1,6 +1,6 @@
 #projects {
   text-align: center;
-  height: 850px;
+  height: 900px;
   width: 100%;
   font-family: 'Karla', sans-serif;
   background-color: rgba(0, 0, 0, .75);
